# emodb_project

./: .gitignore  README.md  inspect_plda.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  test_emotion_models.py  train_ecapa_models.py  train_plda_models.py  verify_installation.py
config/: ecapa_hparams.yaml  emodb_config.yaml  emotion_config.yaml  label_encoder.txt  plda_hparams.yaml
notebooks/: notebook.ipynb
output/models/: training_results_speaker_03.json
output/results/speaker_03/: plda_metrics.json  plda_scores.csv
utils/: __init__.py  create_csv.py  extract_config.py  extract_metadata.py
utils/audio_processing/: __init__.py  create_csv.py  extract_metadata.py  segment.py
utils/features_extraction/: __init__.py  create_loso_splits.py  create_mfcc_csv.py  create_train_val_splits.py  export_mfcc_to_csv.py  extract_embeddings.py  extract_mfcc.py  mfcc.py  splits.py
utils/testing/: __init__.py  emotion_testing.py  plda_scoring.py
utils/training/: README.md  __init__.py  ecapa_trainer.py  example_usage.py  plda_trainer.py
