[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emodb-utils"
version = "0.1.0"
description = "Emotion Analysis utilities for EmoDb dataset with ECAPA-TDNN training"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Aarambha", email = "aarambha108@gmail.com"}
]
keywords = ["emotion-recognition", "speech", "audio", "deep-learning", "ecapa-tdnn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=1.3.0",
    "librosa>=0.9.0",
    "tqdm>=4.60.0",
    "pyyaml>=5.4.0",
    "matplotlib>=3.3.0",
    "numpy>=1.19.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "speechbrain>=1.0.0",
    "soundfile>=0.12.0",
    "hyperpyyaml>=1.0.0",
    "scikit-learn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "notebook>=6.4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/emodb-utils"
Repository = "https://github.com/yourusername/emodb-utils"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests", "*__pycache__*"]
